--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "one-dark-pale",
   "displayName": "One Dark Pale",
-  "description": "One Dark theme without sane colors",
+  "description": "One Dark theme with sane colors",
   "version": "0.0.1",
   "publisher": "szastupov",
   "engines": {
@@ -23,5 +23,7 @@
   },
   "bugs": {
     "url": "https://github.com/szastupov/one-dark-pale/issues"
-  }
+  },
+  "icon": "static/icon.png",
+  "keywords": ["Vscode", "Theme", "Onedark", "one dark"]
 }
