Fix warnings, add git decoration and terminal colors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "one-dark-pale",
   "displayName": "One Dark Pale",
   "description": "One Dark theme with sane colors",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "publisher": "szastupov",
   "engines": {
     "vscode": "^1.15.0"
@@ -25,5 +25,10 @@
     "url": "https://github.com/szastupov/one-dark-pale/issues"
   },
   "icon": "static/icon.png",
-  "keywords": ["Vscode", "Theme", "Onedark", "one dark"]
+  "keywords": ["Vscode", "Theme", "Onedark", "one dark"],
+  "__metadata": {
+    "id": "3282a6af-a023-4840-81b3-9dd762c26331",
+    "publisherDisplayName": "Stepan Zastupov",
+    "publisherId": "8cc2ec6d-f824-4896-a92f-6a46809e9b13"
+  }
 }
